--- a/registrationForm.html
+++ b/registrationForm.html
@@ -55,16 +55,6 @@
     }
 
     .card {
-      border: none;
-      box-shadow: 0 18px 22px 0 rgba(0, 0, 0, 0.2);
-      background: rgba(255, 255, 255, 0.4);
-      border-radius: 16px;
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(6.4px);
-      -webkit-backdrop-filter: blur(6.4px);
-    }
-
-    .card2 {
       padding: 30px 40px;
       margin-top: 60px;
       margin-bottom: 60px;
@@ -109,7 +99,6 @@
     input:focus~.bar:after {
       width: 50%;
     }
-
     .hidden {
       display: none !important;
     }
@@ -120,7 +109,7 @@
 <body>
   <div id="divHome" class="container-fluid px-1 mx-auto" style="display: none">
     <div class="row flex-nowrap">
-      <div id="divSideNav" class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+      <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
         <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
           <span class="fs-5 d-none d-sm-inline">Chicken Coop</span>
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
@@ -156,133 +145,96 @@
           </div>
         </div>
       </div>
-      <div id="divContent" class="col py-3 d-flex justify-content-center">
-        <div id="divDashboard" class="col py-3 d-flex justify-content-center align-items-center ">
-          <div class="card col-md-10 col-8 h-auto" style="background-color: none;">
-            <div class="row d-flex justify-content-center m-3">
+      <div id="divDashboard" class="col py-3 d-flex justify-content-center">
+        <div class="card col-md-10 col-8" style="background-color: none;">
+          <div class="row d-flex justify-content-center" style="padding-left: 5%;">
+            <div class="col-3">
+              <div class="card col-10">
+                <span>Total Eggs Harvested:</span>
+                <h2>3894</h2>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card col-10">
+                <span>Current Temperature</span>
+                <h2>56°</h2>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card col-10">
+                <span>Current Humidity</span>
+                <h2>46%</h2>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card col-10">
+                <span>Days Until Next Cleanout</span>
+                <h2 id="cleanoutDay"></h2>
+              </div>
+            </div>
+          </div>
+          <div>
+            <canvas id="myChart" height="100vh" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
+          </div>
+        </div>
+      </div>
+      <div id="divSettings" class="col py-3" style="display: none;">
+        <div id="divDashboard" class="col py-3 d-flex justify-content-center">
+          <div class="card col-md-10 col-8" style="background-color: none;">
+            <div class="row d-flex justify-content-center" style="padding-left: 5%;">
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Total Eggs Harvested:</span>
+                  <span>Coop Door</span>
                   <h2>3894</h2>
                 </div>
               </div>
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Current Temperature</span>
+                  <span>Coop Light</span>
                   <h2>56°</h2>
                 </div>
               </div>
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Current Humidity</span>
+                  <span>Temperature</span>
                   <h2>46%</h2>
                 </div>
               </div>
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Days Until Next Cleanout</span>
+                  <span>Alarms</span>
                   <h2 id="cleanoutDay"></h2>
                 </div>
               </div>
             </div>
-            <div class="m-3">
-              <canvas id="myChart" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
+            <div class="row d-flex justify-content-center" style="padding-left: 5%;">
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Coop Door</span>
+                  <h2>3894</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Coop Light</span>
+                  <h2>56°</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Temperature</span>
+                  <h2>46%</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Alarms</span>
+                  <h2 id="cleanoutDay"></h2>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-        <div id="divSettings" class="col py-3" style="display: none;">
-          <div id="divDashboard" class="col py-3 d-flex justify-content-center">
-            <div class="card col-md-10 col-8" style="background-color: none;">
-              <h1>Settings</h1>
-              <div class="row d-flex p-3">
-                <div class="col-4">
-                  <div class="card col-12">
-                    <span>Coop Door</span>
-                    <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text" for="openTimeDoor">Automatic Open Time</label>
-                      <input id="openTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                    <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text" for="closeTimeDoor">Automatic Close Time</label>
-                      <input id="closeTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                    <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
-                      <div class="form-check form-switch text-center justify-content-center">
-                        <input class="form-check-input" type="checkbox" role="switch"                     id="switchCoopDoor" checked="checked"/>
-                        <label class="form-check-label" for="switchCoopDoor">Open</label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card col-12">
-                    <span>Coop Light</span>
-                    <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text" for="onTimeLight">Automatic On Time</label>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                    <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text" for="offTimeLight">Automatic Off Time</label>
-                      <input id="offTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                    <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
-                      <div class="form-check form-switch text-center justify-content-center">
-                        <input class="form-check-input" type="checkbox" role="switch"                     id="switchCoopLight" checked="checked"/>
-                        <label class="form-check-label" for="switchCoopLight">On</label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card col-10" style="height: 171%;">
-                    <span>Alarms</span>
-                    <div class="row d-flex justify-content-center p-3" style="height: 50%;">
-                      <h4>LOW FOOD ALARM</h4>
-                      <i class="fa-sharp fa-solid fa-check-to-slot" style="font-size: 4em;"></i>
-                    </div>
-                    <div class="row d-flex justify-content-center p-3" style="height: 50%;">
-                      <h4>LOW WATER ALARM</h4>
-                      <i class="fa-sharp fa-solid fa-check-to-slot" style="font-size: 4em;"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row d-flex p-3">
-                <div class="col-4">
-                  <div class="card col-12">
-                    <span>Coop Heater</span>
-                    <div class="input-group mb-3">
-                      <label class="input-group-text" for="openTimeDoor">Heater On Temperature</label>
-                      <input id="openTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                    <div class="row d-flex justify-content-center p-3">
-                      <button>Heater Timer</button>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card col-12">
-                    <span>Coop Fan</span>
-                    <div class="input-group mb-3">
-                      <label class="input-group-text" for="onTimeLight">Fan On Temperature</label>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                    <div class="row d-flex justify-content-center p-3">
-                      <button>Fan Timer</button>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
-                        aria-describedby="basic-addon2">
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <div>
+              <canvas id="myChart" height="100vh" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
             </div>
           </div>
         </div>
@@ -293,11 +245,10 @@
   <div id="divLogin" class="container-fluid px-1 py-5 mx-auto">
     <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-        <div class="card card2 rounded-5">
+        <div class="card rounded-5">
           <div class="container-fluid">
             <h1 style="letter-spacing: 4px"><b>LOGIN</b></h1>
           </div>
-          <form action="" method="POST">
           <div class="form-group flex-column d-flex">
             <label class="form-control-label px-3">Email</label>
             <input type="text" id="loginEmail" name="loginEmail" placeholder="email@example.com" />
@@ -321,7 +272,6 @@
                 </button>
               </div>
             </div>
-          </form>
             <hr />
             <button type="button" class="btn" id="btnCreateAccountLinker"
               style="background-color: #5a3719; color: white; width: 20%">
@@ -335,7 +285,7 @@
   <div id="divRegister" class="container-fluid px-1 py-5 mx-auto" style="display: none">
     <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-        <div class="card card2 rounded-5">
+        <div class="card rounded-5">
           <div class="container-fluid">
             <h1 style="letter-spacing: 4px"><b>REGISTER</b></h1>
           </div>
@@ -461,37 +411,17 @@
   <script src="js/lib/sweetalert2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-
     let dashboardActive = true;
     let settingsActive = false;
 
     $("#btnCreateAccountLinker").on("click", function () {
-      let frmNewUser = document.querySelector('form')
-      let valid = frmNewUser.reportValidity();
-      $.post("https://simplecoop.swollenhippo.com/coop.php", { coopID:strCoopID })
-          .done(function(data) {
-          console.log(data);
-          let objResult = JSON.parse(data);
-          let outcome = objResult.Outcome
-          console.log(outcome);
-      
-      if(valid == true){
-          console.log("Valid Form")
-          Swal.fire('NEW USER CREATED')
-          $("#divRegister").slideToggle();
-          $("#divLogin").slideToggle();
-      }
-      else{
-          console.log("Invalid Form")
-          Swal.fire('Please Fill Out All Boxes')
-      }
-      });
+      $("#divRegister").slideToggle();
+      $("#divLogin").slideToggle();
     });
 
     $("#btnReturnLogin").on("click", function () {
       $("#divLogin").slideToggle();
       $("#divRegister").slideToggle();
-      
     });
 
     $("#diffAddressCheck").on("change", function () {
@@ -612,7 +542,6 @@
       }
     });
   </script>
-
   <script>
     const labels = [
       'Sunday',
@@ -681,29 +610,6 @@
         document.getElementById("cleanoutDay").innerHTML = "EXPIRED";
       }
     }, 1000);
-  </script>
-  <script>
-    $('#switchCoopDoor').change(function(){
-      if ($("#switchCoopDoor").is(':checked'))
-      {
-          $("label[for='switchCoopDoor']").text("Open");
-      }
-      else
-      {
-          $("label[for='switchCoopDoor']").text("Closed");
-      }
-    });
-
-  $('#switchCoopLight').change(function(){
-    if ($("#switchCoopLight").is(':checked'))
-    {
-        $("label[for='switchCoopLight']").text("On");
-    }
-    else
-    {
-        $("label[for='switchCoopLight']").text("Off");
-    }
-  });
   </script>
 </body>
 
