--- a/registrationForm.html
+++ b/registrationForm.html
@@ -109,7 +109,7 @@
 <body>
   <div id="divHome" class="container-fluid px-1 mx-auto" style="display: none">
     <div class="row flex-nowrap">
-      <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+      <div id="divSideNav" class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
         <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
           <span class="fs-5 d-none d-sm-inline">Chicken Coop</span>
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
@@ -145,96 +145,136 @@
           </div>
         </div>
       </div>
-      <div id="divDashboard" class="col py-3 d-flex justify-content-center">
-        <div class="card col-md-10 col-8" style="background-color: none;">
-          <div class="row d-flex justify-content-center" style="padding-left: 5%;">
-            <div class="col-3">
-              <div class="card col-10">
-                <span>Total Eggs Harvested:</span>
-                <h2>3894</h2>
+      <div id="divContent" class="col py-3 d-flex justify-content-center">
+        <div id="divDashboard" class="col py-3 d-flex justify-content-center align-items-center ">
+          <div class="card col-md-10 col-8 h-auto" style="background-color: none;">
+            <div class="row d-flex justify-content-center m-3">
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Total Eggs Harvested:</span>
+                  <h2>3894</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Current Temperature</span>
+                  <h2>56°</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Current Humidity</span>
+                  <h2>46%</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Days Until Next Cleanout</span>
+                  <h2 id="cleanoutDay"></h2>
+                </div>
               </div>
             </div>
-            <div class="col-3">
-              <div class="card col-10">
-                <span>Current Temperature</span>
-                <h2>56°</h2>
-              </div>
+            <div class="m-3">
+              <canvas id="myChart" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
             </div>
-            <div class="col-3">
-              <div class="card col-10">
-                <span>Current Humidity</span>
-                <h2>46%</h2>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card col-10">
-                <span>Days Until Next Cleanout</span>
-                <h2 id="cleanoutDay"></h2>
-              </div>
-            </div>
-          </div>
-          <div>
-            <canvas id="myChart" height="100vh" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
           </div>
         </div>
-      </div>
-      <div id="divSettings" class="col py-3" style="display: none;">
-        <div id="divDashboard" class="col py-3 d-flex justify-content-center">
-          <div class="card col-md-10 col-8" style="background-color: none;">
-            <div class="row d-flex justify-content-center" style="padding-left: 5%;">
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Coop Door</span>
-                  <h2>3894</h2>
+        <div id="divSettings" class="col py-3" style="display: none;">
+          <div id="divDashboard" class="col py-3 d-flex justify-content-center">
+            <div class="card col-md-10 col-8" style="background-color: none;">
+              <h1>Settings</h1>
+              <div class="row d-flex p-3">
+                <div class="col-4">
+                  <div class="card col-12">
+                    <span>Coop Door</span>
+                    <div class="input-group mb-3 justify-content-center">
+                      <label class="input-group-text" for="openTimeDoor">Automatic Open Time</label>
+                      <input id="openTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                    <div class="input-group mb-3 justify-content-center">
+                      <label class="input-group-text" for="closeTimeDoor">Automatic Close Time</label>
+                      <input id="closeTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                    <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
+                      <div class="form-check form-switch text-center justify-content-center">
+                        <input class="form-check-input" type="checkbox" role="switch"                     id="switchCoopDoor" checked="checked"/>
+                        <label class="form-check-label" for="switchCoopDoor">Open</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card col-12">
+                    <span>Coop Light</span>
+                    <div class="input-group mb-3 justify-content-center">
+                      <label class="input-group-text" for="onTimeLight">Automatic On Time</label>
+                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                    <div class="input-group mb-3 justify-content-center">
+                      <label class="input-group-text" for="offTimeLight">Automatic Off Time</label>
+                      <input id="offTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                    <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
+                      <div class="form-check form-switch text-center justify-content-center">
+                        <input class="form-check-input" type="checkbox" role="switch"                     id="switchCoopLight" checked="checked"/>
+                        <label class="form-check-label" for="switchCoopLight">On</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card col-10" style="height: 171%;">
+                    <span>Alarms</span>
+                    <div class="row d-flex justify-content-center p-3" style="height: 50%;">
+                      <h4>LOW FOOD ALARM</h4>
+                      <i class="fa-sharp fa-solid fa-check-to-slot" style="font-size: 4em;"></i>
+                    </div>
+                    <div class="row d-flex justify-content-center p-3" style="height: 50%;">
+                      <h4>LOW WATER ALARM</h4>
+                      <i class="fa-sharp fa-solid fa-check-to-slot" style="font-size: 4em;"></i>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Coop Light</span>
-                  <h2>56°</h2>
+              <div class="row d-flex p-3">
+                <div class="col-4">
+                  <div class="card col-12">
+                    <span>Coop Heater</span>
+                    <div class="input-group mb-3">
+                      <label class="input-group-text" for="openTimeDoor">Heater On Temperature</label>
+                      <input id="openTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                    <div class="row d-flex justify-content-center p-3">
+                      <button>Heater Timer</button>
+                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card col-12">
+                    <span>Coop Fan</span>
+                    <div class="input-group mb-3">
+                      <label class="input-group-text" for="onTimeLight">Fan On Temperature</label>
+                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                    <div class="row d-flex justify-content-center p-3">
+                      <button>Fan Timer</button>
+                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                        aria-describedby="basic-addon2">
+                    </div>
+                  </div>
+                  <button type="button" class="btn" id="btnSaveSettings" style="background-color: #bc6c25; color: white">
+                    Save Settings
+                  </button>
                 </div>
               </div>
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Temperature</span>
-                  <h2>46%</h2>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Alarms</span>
-                  <h2 id="cleanoutDay"></h2>
-                </div>
-              </div>
-            </div>
-            <div class="row d-flex justify-content-center" style="padding-left: 5%;">
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Coop Door</span>
-                  <h2>3894</h2>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Coop Light</span>
-                  <h2>56°</h2>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Temperature</span>
-                  <h2>46%</h2>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="card col-10">
-                  <span>Alarms</span>
-                  <h2 id="cleanoutDay"></h2>
-                </div>
-              </div>
-            </div>
-            <div>
-              <canvas id="myChart" height="100vh" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
             </div>
           </div>
         </div>
@@ -245,7 +285,7 @@
   <div id="divLogin" class="container-fluid px-1 py-5 mx-auto">
     <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-        <div class="card rounded-5">
+        <div class="card card2 rounded-5">
           <div class="container-fluid">
             <h1 style="letter-spacing: 4px"><b>LOGIN</b></h1>
           </div>
@@ -285,7 +325,7 @@
   <div id="divRegister" class="container-fluid px-1 py-5 mx-auto" style="display: none">
     <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-        <div class="card rounded-5">
+        <div class="card card2 rounded-5">
           <div class="container-fluid">
             <h1 style="letter-spacing: 4px"><b>REGISTER</b></h1>
           </div>
@@ -360,13 +400,13 @@
               <div class="row justify-content-between text-left">
                 <div class="form-group col-sm-6 flex-column d-flex">
                   <label class="form-control-label px-3">Address Line 1</label>
-                  <input type="text" id="inputCoopd1" name="address-1"
+                  <input type="text" id="inputCoopAddress1" name="address-1"
                     placeholder="Street address, P.O. box, company name, c/o" />
                   <span class="bar"></span>
                 </div>
                 <div class="form-group col-sm-6 flex-column d-flex">
                   <label class="form-control-label px-3">Address Line 2</label>
-                  <input type="text" id="inputCoopd2" name="address-2"
+                  <input type="text" id="inputCoopAddress2" name="address-2"
                     placeholder="Apartment, suite , unit, building, floor, etc" />
                   <span class="bar"></span>
                 </div>
@@ -464,15 +504,26 @@
         settingsActive = false;
       }
     });
+
     $("#btnNavSettings").on("click", function () {
-      console.log("Settings");
       if (!settingsActive) {
         $("#divDashboard").attr("style", "display: none !important");
         $("#divSettings").show();
         dashboardActive = false;
-        settingsActive = true;
+        settingsActive = true;;
       }
     });
+
+    $("#btnSaveSettings").on("click", function () {
+      let strSettings = 'A';
+      let strValue = 'B';
+      $.post(base_url+"settings.php",{SessionID:strSessionID,setting:strSettings, value:strValue}).done(function(data){
+            let objResult = JSON.parse(data);
+            let outcome = objResult.Outcome;
+            console.log(outcome);
+        });
+      });
+
     $("#btnNavWarnings").on("click", function () {
       Swal.fire({
         title: 'You have 3 warnings',
